Fix menu items alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,6 +96,9 @@ ul {
     cursor: default;
     color: white;
 }
+#nav-bar-lightswitch {
+    display: flex;
+}
 #nav-bar-lightswitch img {
     border: solid 2px white;
     border-radius: 20px;
@@ -114,6 +117,7 @@ ul {
 .nav-bar-item {
     margin-left: 5%;
     text-align: right;
+    border-bottom: solid 2px transparent;
 }
 .nav-bar-active {
     border-bottom: solid 2px white;
